src/test/deca/context/valid/LE/intfield.deca
// Description:
//    test les attributs int
//
// Resultats:
//    
//
// Historique:
//    cree le 19/01/2022

class A {
    int x;
    int y = 15;
}
