src/test/deca/context/invalid/LE/doubleDeclAtt.deca
// Historique:
//    cree le 19/01/2022

class C1 {
    int x ;
    int x = 2 ;
}

